[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.90.0"

[workspace.dependencies]
thiserror = "2.0.17"

[workspace.dependencies.tokio]
version = "1.47.0"
features = ["rt-multi-thread", "macros", "net", "fs", "time"]

[workspace.dependencies.axum]
version = "0.8.6"
default-features = false
features = ["macros", "http1", "tokio", "form"]
