[package]
name = "omicron"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
dotenvy = "0.15.7"

[dependencies.tokio]
version = "1.47.0"
features = ["rt-multi-thread", "macros", "net", "fs", "time"]

[dependencies.tower]
version = "0.5.2"

[dependencies.axum]
version = "0.8.6"
default-features = false
features = ["macros", "http1", "tokio", "form"]
