[package]
name = "omicron"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true

[dependencies]
omicron-db = { path = "../omicron-db" }

thiserror.workspace = true
dotenvy = "0.15.7"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["normalize-path"] }

[dependencies.tokio]
version = "1.47.0"
features = ["rt-multi-thread", "macros", "net", "fs", "time"]

[dependencies.axum]
version = "0.8.6"
default-features = false
features = ["macros", "http1", "tokio", "form"]
